plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.4'
	id 'io.spring.dependency-management' version '1.1.4'
}

allprojects {
	apply plugin: 'java'
	group = 'sejong'
	version = '0.0.1-SNAPSHOT'
	sourceCompatibility = '21'

	repositories {
		mavenCentral()
	}
}

subprojects {
	sourceCompatibility = '21'

	apply plugin: "io.spring.dependency-management"
	apply plugin: "org.springframework.boot"

	configurations {
		compileOnly {
			extendsFrom annotationProcessor
		}
	}

	dependencies {
		compileOnly 'org.projectlombok:lombok'
		annotationProcessor 'org.projectlombok:lombok'
		annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"

		implementation 'org.springframework.boot:spring-boot-starter'
		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
		implementation 'org.springframework.boot:spring-boot-starter-web'
		implementation 'org.springframework.boot:spring-boot-starter-validation'

		testImplementation 'org.springframework.boot:spring-boot-starter-test'

		// mysql test-container
		testImplementation "org.testcontainers:testcontainers:1.19.3"
		testImplementation "org.testcontainers:junit-jupiter:1.19.3"

		implementation 'com.mysql:mysql-connector-j'

		// batch
		implementation 'org.springframework.boot:spring-boot-starter-batch'
		testImplementation 'org.springframework.batch:spring-batch-test'
	}

	tasks.named('test') {
		useJUnitPlatform()
	}
}

bootJar.enabled = false
jar.enabled = true
